# eager

./: .clang_complete  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  Vagrantfile  premake5.lua
src/: Aspect.h  BaseApplication.cpp  BaseApplication.h  Engine.cpp  Engine.h  Entity381.cpp  Entity381.h  EntityManager.cpp  EntityManager.h  GameManager.cpp  GameManager.h  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  InputManager.h  Main.cpp  Manager.h  TutorialApplication.cpp  TutorialApplication.h  Types.h
src/config/: resources.cfg
src/config/unix/: plugins.cfg
src/config/windows/debug/: plugins_d.cfg  resources_d.cfg
src/config/windows/release/: plugins.cfg  resources.cfg
